# burned.py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
burnedpy/: __init__.py  config.py  constants.py  db.py  fs.py  manager.py  mutator.py  service.py
examples/: index.py  search.py
